--- a/site.yml
+++ b/site.yml
@@ -1,27 +1,7 @@
 ---
 # This playbook deploys the whole application stack in this site.
 
-- name: :Cleanup Cloud-init
-  hosts: all
-  remote_user: root
-  tags: cleanup
-  gather_facts: no
-
-  roles:
-   - cleanup
-   - reboot
-
-- name: Deploy common configuration
-  hosts: all
-  remote_user: root
-  tags: common
-  gather_facts: no
-
-  tasks:
-   - include_role: name=firewalld
-   - include_role: name=ntp
-   - include_role: name=minimal
-   - include_role: name=reboot
+- import_playbook: common.yml
 
 - name: Installing and configuring PXE Server
   hosts: all
@@ -32,4 +12,3 @@
   roles:
    - pxe-server
    - reboot
-
