--- a/roles/minimal/tasks/main.yml
+++ b/roles/minimal/tasks/main.yml
@@ -6,16 +6,24 @@
 # Download and install EPEL for Centos/RHEL version 7
 - name: Download EPEL Repo - Centos/RHEL 7
   dnf: name=epel-release state=present
+  when: ansible_facts['distribution'] == 'CentOS' and ( ansible_facts['distribution_major_version'] == '7' or ansible_facts['distribution_major_version'] == '8' )
+
+- name: Download EPEL Repo - RedHat Linux 8
+  dnf: name=https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm state=present disable_gpg_check=true
+  when: ansible_facts['distribution'] == 'OracleLinux' and ansible_facts['distribution_major_version'] == '8'
+
+- name: Download EPEL Repo - Oracle Linux 8
+  dnf: name=oracle-epel-release-el8 state=present
+  when: ansible_facts['distribution'] == 'OracleLinux' and ansible_facts['distribution_major_version'] == '8'
 
 - name: Upgrade all packages
   dnf: name=* state=latest
 
 - name: Installing minimal soft
   dnf:
-   name: ['bash-completion', 'mc', 'vim', 'net-tools', 'bzip2', 'zip', 'p7zip', 'p7zip-plugins', 'unzip']
-   state: present
+    name: ['bash-completion', 'mc', 'vim', 'net-tools', 'bzip2', 'zip', 'p7zip', 'p7zip-plugins', 'unzip']
+    state: present
   register: result
   ignore_errors: False
 
 - include: install_httpd.yml
-
