--- a/roles/pxe-server/handlers/main.yml
+++ b/roles/pxe-server/handlers/main.yml
@@ -3,9 +3,11 @@
 - name: restart xinetd
   service: name=xinetd state=restarted
 
+- name: restart tftp
+  service: name=tftp state=restarted
+
 - name: restart nfs-server
   service: name=nfs-server state=restarted
 
 - name: restart rpcbind
   service: name=rpcbind state=restarted
-
