Fix auto deploy

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,9 @@ inventory = ./hosts
 roles_path = ./roles
 nocows = 1
 command_warnings=False
+host_key_checking = False
+deprecation_warnings=False
+interpreter_python=/usr/bin/python3
 
 [ssh_connection]
-pipelining = True
-control_path = /tmp/ansible-ssh-%%h-%%p-%%r
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
