--- a/roles/reboot/tasks/main.yml
+++ b/roles/reboot/tasks/main.yml
@@ -12,7 +12,7 @@
 - name: Waiting for server to come back after cleanup...
   connection: local
   wait_for:
-   host: "{{ inventory_hostname }}"
-   port: 22
-   delay: 10 
-   timeout: 300
+    host: "{{ ansible_default_ipv4.address }}"
+    port: 22
+    delay: 10
+    timeout: 60
